# BooruRamen

./: RECOMMENDATION_ENGINE_ANALYSIS.md  package-lock.json  package.json  vite.config.mjs
public/: ml-test.html  ml-test.js
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: SettingsSidebar.vue
src/services/: BanditExplorer.js  DownloadService.js  MLScorer.js  RecommendationSystem.js  StorageService.js  TagEmbedding.js  db.js  videoProxy.js
src/stores/: settings.js
src/views/: FavoritesView.vue  FeedView.vue  HistoryView.vue  LikesView.vue  MLDiagnosticsView.vue  PostViewerView.vue  ProfileAnalyticsView.vue  ProfileSettingsView.vue  ProfileView.vue
src/workers/: recommendation.worker.js
