[package]
name = "app"
version = "0.2.0-0"
description = "A Tauri App"
authors = ["you"]
license = "GPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "booruramen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.2.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
